OBPIH-5006 add collapsable mobile menu for react and gsp pages bump up jquery version as a fix for collapsable menu

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -105,10 +105,15 @@ body {
 .dropdown-menu-subsections {
   max-height: 60vh;
   max-width: 50vw;
+  min-width: 250px;
   overflow: hidden auto;
   display: flex;
   width: max-content;
   flex-wrap: wrap;
+}
+
+.navbar-nav .dropdown-menu {
+  position: absolute;
 }
 
 .subsection-title {
