--- a/src/js/components/Layout/HeaderStyles.scss
+++ b/src/js/components/Layout/HeaderStyles.scss
@@ -7,7 +7,6 @@
   font-style: normal;
   color: var(--blue-700);
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
-  padding: 0 32px;
 
   .navbar-icons .dropdown-menu-wrapper {
     padding-top: 9px !important;
